fix horizontal scroll

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -3,6 +3,7 @@
   padding-bottom: 50px;
   &__preview {
     position: relative;
+    overflow: hidden;
     &-row {
       position: relative;
       padding-top: 95px;
